[package]
name = "bubblegum_nif"
version = "0.1.0"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Elixir NIFs for Metaplex Bubblegum compressed NFTs"

[lib]
name = "bubblegum_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29.1", features = ["derive"] }
mpl-bubblegum = "1.2.0"
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
bs58 = "0.5.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
base64 = "0.21"
rand = "0.8"
url = "2.4"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
rocksdb = { version = "0.21", optional = true }
tracing = "0.1"
bincode = "1.3"

[features]
default = ["persistent-storage"]
persistent-storage = ["rocksdb"]
